fix: reviews padding e gap.

--- a/src/app/components/reviews/reviews.component.scss
+++ b/src/app/components/reviews/reviews.component.scss
@@ -6,13 +6,14 @@
   margin-top: rem(20);
   max-width: rem(1200);
   width: 100%;
+  padding-bottom: rem(20);
+  row-gap: rem(10);
 
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: rem(15);
 
   .review {
-    margin-top: rem(20);
     background-color: $color-panel-bg;
     display: flex;
     flex-direction: column;
@@ -57,6 +58,7 @@
       padding: rem(10 10 0 10);
 
       &__description {
+        padding-bottom: rem(10);
       }
     }
   }
